--- a/package.json
+++ b/package.json
@@ -6,23 +6,28 @@
 	"scripts": {
 		"dev": "node scripts/esbuild.config.mjs",
 		"build": "tsc --noEmit --skipLibCheck && node scripts/esbuild.config.mjs production",
+		"lint": "biome lint",
+		"lint:fix": "biome lint --fix",
+		"types": "tsc --noEmit",
 		"version": "node scripts/version-bump.mjs && git add manifest.json versions.json"
 	},
 	"dependencies": {
 		"@tanstack/react-table": "^8.21.3",
+		"clsx": "^2.1.1",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0"
 	},
 	"devDependencies": {
-		"@types/node": "^16.11.6",
-		"@types/react": "^19.1.5",
+		"@biomejs/biome": "2.0.0-beta.5",
+		"@types/node": "^22.15.24",
+		"@types/react": "^19.1.6",
 		"@types/react-dom": "^19.1.5",
-		"@typescript-eslint/eslint-plugin": "5.29.0",
-		"@typescript-eslint/parser": "5.29.0",
-		"builtin-modules": "3.3.0",
-		"esbuild": "0.17.3",
+		"builtin-modules": "5.0.0",
+		"esbuild": "0.25.5",
 		"obsidian": "latest",
-		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+		"tslib": "^2.8.1",
+		"type-fest": "^4.41.0",
+		"typescript": "5.8.3",
+		"typescript-plugin-css-modules": "^5.1.0"
 	}
 }
