--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,18 @@
 {
-	"include": ["src"],
+	"include": [
+		"src"
+	],
 	"compilerOptions": {
-		"lib": ["DOM", "ES5", "ES6", "ES7"],
+		"plugins": [
+			{
+				"name": "typescript-plugin-css-modules"
+			}
+		],
+
+		"lib": [
+			"DOM",
+			"ESNext"
+		],
 		"module": "ESNext",
 		"moduleResolution": "node",
 		"isolatedModules": true,
@@ -19,7 +30,9 @@
 
 		"baseUrl": ".",
 		"paths": {
-			"@/*": ["src/*"]
+			"@/*": [
+				"src/*"
+			]
 		}
 	}
 }
