--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"@tanstack/react-table": "^8.21.3",
 		"clsx": "^2.1.1",
 		"react": "^19.1.0",
-		"react-dom": "^19.1.0"
+		"react-dom": "^19.1.0",
+		"zustand": "^5.0.5"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.0.0-beta.5",
