--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
 		"version": "node scripts/version-bump.mjs && git add manifest.json versions.json"
 	},
 	"dependencies": {
-		"@caldwell619/react-kanban": "^0.0.12",
-		"@hello-pangea/dnd": "^18.0.1",
 		"@tanstack/react-table": "^8.21.3",
 		"clsx": "^2.1.1",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
+		"zod": "^3.25.46",
 		"zustand": "^5.0.5"
 	},
 	"devDependencies": {
@@ -30,7 +29,6 @@
 		"obsidian": "latest",
 		"tslib": "^2.8.1",
 		"type-fest": "^4.41.0",
-		"typescript": "5.8.3",
-		"typescript-plugin-css-modules": "^5.1.0"
+		"typescript": "5.8.3"
 	}
 }
